fixing padding on mobile & checker menu

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   margin-left: 70px;
-  padding: 15px 30px;
   min-height: 100vh;
 }
 
